@@ -27,6 +27,8 @@
 * Change size of LaTeX-like commands \sup, \sub to be the same as \overset, \underset.
 * Noticeable speed up drawing, PDE solving, etc.
 * Change ticks drawing in colorbar.
+INCOMPATIBLE:
+* Disable MGL command 'setsizescl'. At this, the similar C/C++/Fortran/... functions still working.
 
 
 2.4.1 Released 20 July 2017
